Revision history for Net-Gitlab

{{$NEXT}}

0.02      2012-12-25 20:36:13 America/Boise
  - fix stupid error in parm handling
  - force module prereq that dzil wasnt finding 

0.01      2012-12-21 20:25:37 America/Boise
  - Initial Creation